Bug #528508 - Wrap long lines when printing emails

--- a/data/webview-print.css
+++ b/data/webview-print.css
@@ -1,6 +1,7 @@
 html, body {
         padding: 0;
         margin: 0;
+	word-wrap: break-word;
 }
 
 body {
